2012-07-15  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* First public alpha v0.0.1 becomes available.
