@@ -1,3 +1,7 @@
+2012-07-16  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added a common code interface Unit, for mechs and combat vehicles.
+
 2012-07-15  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* First public alpha v0.0.1 becomes available.
